--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для <br />вашого бізнесу</h1>
-          <button type="button" class="hero-button">Замовити послугу</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
 
@@ -574,6 +576,13 @@
         </div>
       </div>
     </footer>
+    
+      </div>
+    </div>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <p></p>
+        <button type="button" class="modal-close-button" data-modal-close><svg class="modal-icon" width="18" height="18"><use href=""></use> </svg> </button>
     <script src="./js/modal.js"></script>
   </body>
 </html>
