--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
     </div>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p></p>
-        <button type="button" class="modal-close-button" data-modal-close><svg class="modal-icon" width="18" height="18"><use href=""></use> </svg> </button>
+      
+        <button type="button" class="modal-close-button" data-modal-close><svg class="icon-modal" width="11" height="11"><use href="./images/icons.svg#icon-modal"></use> </svg> </button>
     <script src="./js/modal.js"></script>
   </body>
 </html>
