--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,14 @@
                     height="294"
                     alt="Фото трьох людей"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Технокряк</h3>
@@ -116,11 +119,14 @@
                     height="294"
                     alt="Два баскетболісти"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">
@@ -140,11 +146,14 @@
                     height="294"
                     alt="Логотип ресторану морської їжі"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Ресторан Seafood</h3>
@@ -162,11 +171,14 @@
                     height="294"
                     alt="Навушники"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Проєкт Prime</h3>
@@ -184,11 +196,14 @@
                     height="294"
                     alt="Дві коробки"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Проєкт Boxes</h3>
@@ -206,11 +221,14 @@
                     height="294"
                     alt="Монітор"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Inspiration has no Borders</h3>
@@ -228,11 +246,14 @@
                     height="294"
                     alt="Книга"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Видання Limited Edition</h3>
@@ -250,11 +271,14 @@
                     height="294"
                     alt="Лейба"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Проєкт LAB</h3>
@@ -272,11 +296,14 @@
                     height="294"
                     alt="Ноутбук"
                   />
-                  <p class="portfolio-thumb-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-thumb-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-item">
                   <h3 class="portfolio-title">Growing Business</h3>
