--- a/index.html
+++ b/index.html
@@ -576,13 +576,17 @@
         </div>
       </div>
     </footer>
-    
-      </div>
-    </div>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-      
-        <button type="button" class="modal-close-button" data-modal-close><svg class="icon-modal" width="11" height="11"><use href="./images/icons.svg#icon-modal"></use> </svg> </button>
+        <button type="button" class="modal-close-button" data-modal-close>
+          <svg class="icon-modal" width="11" height="11">
+            <use href="./images/icons.svg#icon-modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
